--- a/SendSMSHost/Content/Modal.css
+++ b/SendSMSHost/Content/Modal.css
@@ -25,6 +25,10 @@
     font-family: Helvetica, Arial, sans-serif;
 }
 
+.modal-container-fixed-500 {
+    max-width: 500px;
+}
+
 .modal-header h3 {
     margin-top: 0;
     color: #42b983;
