Charts aangepast: ForeverChart naar Pie-chart, HourChart naar lopend uur

--- a/SendSMSHost/Views/Dashboard/Index.cshtml
+++ b/SendSMSHost/Views/Dashboard/Index.cshtml
@@ -16,22 +16,22 @@
 
     <div class="row">
         <div class="h4">Forever</div>
-        <bar-chart :chart-data="foreverGraph_data" :options="weekGraph_options"></bar-chart>
+        <pie-chart :chart-data="foreverGraph_data" :options="barGraph_options"></pie-chart>
     </div>
 
     <div class="row">
         <div class="h4">Week</div>
-        <bar-chart :chart-data="weekGraph_data" :options="weekGraph_options"></bar-chart>
+        <bar-chart :chart-data="weekGraph_data" :options="barGraph_options"></bar-chart>
     </div>
 
     <div class="row">
         <div class="h4">Day</div>
-        <bar-chart :chart-data="dayGraph_data" :options="weekGraph_options"></bar-chart>
+        <bar-chart :chart-data="dayGraph_data" :options="barGraph_options"></bar-chart>
     </div>
 
     <div class="row">
         <div class="h4">Hour</div>
-        <bar-chart :chart-data="hourGraph_data" :options="weekGraph_options"></bar-chart>
+        <bar-chart :chart-data="hourGraph_data" :options="barGraph_options"></bar-chart>
     </div>
 
 </article>
