--- a/SendSMSHost/Content/Site.css
+++ b/SendSMSHost/Content/Site.css
@@ -26,7 +26,6 @@ textarea {
 
 .list-scrollable {
     max-height: 70vh;
-    overflow-y: auto;
 }
 
 .table-header-truncate {
@@ -36,7 +35,62 @@ textarea {
     max-width: 100px;
 }
 
+.chart{
+    height: 400px;
+    width: 100%;
+}
+
+.navbar-brand{
+    font-size: 24px;
+}
+
+a[aria-expanded=true] .glyphicon-resize-full {
+    display: none;
+}
+
+a[aria-expanded=false] .glyphicon-resize-small {
+    display: none;
+}
+
 .alert-light {
     border-color: #d6d8db;
 }
 
+.table-row-selected {
+    border-left-style: solid;
+    border-left-color: red;
+    border-left-width: 10px;
+}
+
+.table-row-header-fixed-width{
+    width: 5px;
+}
+
+.sms-list-item{
+    margin: 1px 0px;
+}
+
+.scrollbar {
+    overflow-y: auto;
+    padding-right: 20px;
+}
+
+    .scrollbar::-webkit-scrollbar {
+        background-color: transparent;
+        width: 6px;
+    }
+
+    .scrollbar::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        border: 1px solid #777;
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+        background-color: #777;
+    }
+
+    .scrollbar::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+        border-radius: 10px;
+        background-color: transparent;
+        background-clip: content-box;
+        border: 2px solid transparent;
+    }
