--- a/SendSMSHost/Content/Site.css
+++ b/SendSMSHost/Content/Site.css
@@ -13,11 +13,13 @@ body {
     padding-right: 15px;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
+
+.fixed-width {
     max-width: 280px;
+}
+
+.max-width {
+    min-width: 100%;
 }
 
 [v-cloak] {
