--- a/SendSMSHost/Views/Home/Index.cshtml
+++ b/SendSMSHost/Views/Home/Index.cshtml
@@ -50,76 +50,17 @@
             <ul class="list-group list-scrollable scrollbar">
                 <li v-for="s in smsList"
                     v-on:click="selectSms(s)" :class="getSmsClass(s)">
-                    <span class="list-group-item-heading">{{ s.ContactFirstName + ' ' + s.ContactLastName }}</span>
-                    <span class="list-group-item-text text-muted"> ({{ s.ContactNumber }})</span>
+                    <span class="list-group-item-heading">{{ getFullContactName(s) }}</span>
+                    <span class="list-group-item-text text-muted">({{ s.ContactNumber }})</span>
                     <span class="badge">{{ s.StatusName }}</span>
                     <div class="list-group-item-text lead">{{ getShortenedMessage(s.Message) }}</div>
                 </li>
             </ul>
         </div>
-        <article v-if="currentSms" class="col-md-4">
-            <h3>Details</h3>
-            <div v-if="editMode" class="form-group">
-                <table>
-                    <tr>
-                        <td>Contact:</td>
-                        <td>
-                            <select v-model="currentSms.ContactId" class="form-control"
-                                    v-on:change="currentSmsSelectedContactChanged(currentSms.ContactId)">
-                                <option v-for="contact in contactList"
-                                        v-bind:value="contact.Id">
-                                    {{ contact.FirstName + ' ' + contact.LastName }}
-                                </option>
-                            </select>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Nummer:</td>
-                        <td><input v-model="currentSms.ContactNumber" class="form-control"></td>
-                    </tr>
-                    <tr>
-                        <td>Bericht:</td>
-                        <td><textarea v-model="currentSms.Message" class="form-control"> </textarea></td>
-                    </tr>
-                    <tr>
-                        <td>Status:</td>
-                        <td>
-                            <select v-model="currentSms.StatusId" class="form-control"
-                                    v-on:change="currentSmsSelectedStatusChanged(currentSms.StatusId)">
-                                <option v-for="status in statusList"
-                                        v-bind:value="status.Id">
-                                    {{ status.Name }}
-                                </option>
-                            </select>
-                        </td>
-                    </tr>
-                </table>
-                <button v-on:click="saveEdit()" class="btn btn-primary">Save</button>
-                <button v-on:click="hideEditMode()" class="btn btn-primary">Cancel</button>
-            </div>
-            <div v-else>
-                <table>
-                    <tr v-if="currentSms.ContactIsNotAnonymous">
-                        <td>Contact:</td>
-                        <td class="smsContactName">{{  currentSms.ContactFirstName + ' ' + currentSms.ContactLastName}}</td>
-                    </tr>
-                    <tr>
-                        <td>Nummer:</td>
-                        <td class="sms">{{ currentSms.ContactNumber}}</td>
-                    </tr>
-                    <tr>
-                        <td>Bericht:</td>
-                        <td>{{ currentSms.Message}}</td>
-                    </tr>
-                    <tr>
-                        <td>Status:</td>
-                        <td>{{ currentSms.StatusName}}</td>
-                    </tr>
-                </table>
-                <button v-on:click="showEditMode()" class="btn btn-primary">Edit</button>
-                <button v-on:click="requestDeleteSms(currentSms)" class="btn btn-danger">Delete</button>
-            </div>
-        </article>
+        <edit-sms-form v-if="currentSms" class="col-md-4" 
+                       :selected-sms="currentSms"
+                       :status-list="statusList"
+                       :contact-list="contactList"></edit-sms-form>
     </nav>
 </article>
 
