--- a/SendSMSHost/Content/Modal.css
+++ b/SendSMSHost/Content/Modal.css
@@ -23,6 +23,8 @@
     box-shadow: 0 2px 8px rgba(0, 0, 0, .33);
     transition: all .3s ease;
     font-family: Helvetica, Arial, sans-serif;
+    max-height:100%;
+    overflow-y: auto;
 }
 
 .modal-container-fixed-500 {
@@ -37,6 +39,7 @@
 .modal-body {
     margin: 20px 0;
     height: 100%;
+    overflow-y: auto;
 }
 
 .modal-default-button {
