--- a/SendSMSHost/Content/Modal.css
+++ b/SendSMSHost/Content/Modal.css
@@ -23,8 +23,9 @@
     box-shadow: 0 2px 8px rgba(0, 0, 0, .33);
     transition: all .3s ease;
     font-family: Helvetica, Arial, sans-serif;
-    max-height:100%;
+    max-height: 100%;
     overflow-y: auto;
+    max-width: 95%;
 }
 
 .modal-container-fixed-500 {
