--- a/SendSMSHost/Views/Shared/_Layout.cshtml
+++ b/SendSMSHost/Views/Shared/_Layout.cshtml
@@ -20,7 +20,6 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("Sync", "Index", "Sync", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("Dashboard", "Index", "Dashboard", new { area = "" }, null)</li>
                 </ul>
@@ -31,7 +30,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Eindwerk David Boute</p>
         </footer>
     </div>
 
